fixed-overflow

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ h5 {
   z-index: 1;
   box-shadow: 0px 0px 20px 0px black;
   margin-top: 30px;
+  overflow: auto;
  }
  
  .tools {
